# workout-tracker-backend

./: .flake8  .pre-commit-config.yaml  README.md  create_dynamodb_locally.py  pyproject.toml
src/: config.py  exceptions.py  main.py  model.py
src/adapters/repository/: __init__.py  dynamodb.py  factories.py  workout_protocol.py
src/api/: deps.py
src/api/v1/: api.py
src/api/v1/endpoints/: health_check.py  workout_log.py  workout_plans.py
tests/: conftest.py  utils.py
tests/e2e/api/: test_health_check.py  test_logs.py  test_plans.py
tests/integration/: test_plan_repository.py  test_repository_factories.py
tests/unit/: test_model.py
